k8s/matomo/classic/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matomo
  labels:
    app: matomo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matomo
  template:
    metadata:
      labels:
        app: matomo
    spec:
      containers:
      - name: matomo
        image: wodby/matomo:3.14
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: matomo-http
          protocol: TCP      
        - containerPort: 443
          name: matomo-https
          protocol: TCP                   
      restartPolicy: Always
