k8s/matomo/classic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matomo
  labels:
    app: matomo
spec:
  ports:
    - port: 80
      targetPort: 80
      name: matomo-http
    - port: 443
      targetPort: 443
      name: matomo-https
  selector:
    app: matomo
